--- a/apps/frontend/src/pages/index.astro
+++ b/apps/frontend/src/pages/index.astro
@@ -23,7 +23,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
   <Header />
   <main id="main-content">
     <section id="hero">
-      <h1>Mingalaba</h1>
+      <h1>Arguflow</h1>
       <a
         target="_blank"
         href="/rss.xml"
@@ -41,19 +41,13 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       </a>
 
       <p>
-        AstroPaper is a minimal, responsive, accessible and SEO-friendly Astro
-        blog theme. This theme follows best practices and provides accessibility
-        out of the box. Light and dark mode are supported by default. Moreover,
-        additional color schemes can also be configured.
+        Arguflow is a tech startup trying to solve the problem of constructive
+        diaologue for everyone from individuals to organizations. Thus far, we
+        have shipped two products: <a class="underline" href="https://arguflow.gg">Arguflow Live Debate</a> and
+        <a class="underline" href="https://arguflow.com">Arguflow AI Debate Coach</a>.
       </p>
       <p>
-        Read the blog posts or check
-        <LinkButton
-          className="hover:text-skin-accent underline underline-offset-4 decoration-dashed"
-          href="https://github.com/satnaing/astro-paper#readme"
-        >
-          README
-        </LinkButton> for more info.
+        Read the blog posts for more info.
       </p>
       {
         // only display if at least one social link is enabled
