feature: Added skinner

--- a/apps/frontend/src/layouts/Layout.astro
+++ b/apps/frontend/src/layouts/Layout.astro
@@ -75,6 +75,7 @@ const socialImageURL = new URL(
     }
 
     <script is:inline src="/toggle-theme.js"></script>
+    <script defer data-domain="blog.arguflow.com" src="https://perhaps.arguflow.com/js/script.js"></script>
   </head>
   <body>
     <slot />
