feature: change analytics to .ai

--- a/apps/frontend/src/layouts/Layout.astro
+++ b/apps/frontend/src/layouts/Layout.astro
@@ -75,7 +75,10 @@ const socialImageURL = new URL(
     }
 
     <script is:inline src="/toggle-theme.js"></script>
-    <script defer data-domain="blog.arguflow.com" src="https://perhaps.arguflow.com/js/script.js"></script>
+    <script
+      defer
+      data-domain="blog.arguflow.ai"
+      src="https://perhaps.arguflow.com/js/script.js"></script>
   </head>
   <body>
     <slot />
