bugfix: update all urls

--- a/apps/frontend/src/pages/index.astro
+++ b/apps/frontend/src/pages/index.astro
@@ -44,7 +44,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
         Arguflow is a tech startup trying to solve the problem of constructive
         diaologue for everyone from individuals to organizations. Thus far, we
         have shipped two products: <a class="underline" href="https://arguflow.gg">Arguflow Live Debate</a> and
-        <a class="underline" href="https://arguflow.com">Arguflow AI Debate Coach</a>.
+        <a class="underline" href="https://coach.arguflow.ai">Arguflow AI Debate Coach</a>.
       </p>
       <p>
         Read the blog posts for more info.
