--- a/apps/frontend/src/components/Header.astro
+++ b/apps/frontend/src/components/Header.astro
@@ -3,8 +3,6 @@ import { LOGO_IMAGE, SITE } from "@config";
 import Hr from "./Hr.astro";
 import LinkButton from "./LinkButton.astro";
 
-import logoSVG from "/assets/logo.svg";
-
 export interface Props {
   activeNav?: "posts" | "tags" | "search";
 }
@@ -20,7 +18,7 @@ const { activeNav } = Astro.props;
         {
           LOGO_IMAGE.enable ? (
             <img
-              src={logoSVG}
+              src="/assets/logo.svg"
               alt="Arguflow Logo"
               width={LOGO_IMAGE.width}
               height={LOGO_IMAGE.height}
@@ -68,13 +66,13 @@ const { activeNav } = Astro.props;
             </a>
           </li>
           <li>
-            <a href="https://arguflow.com/"> AI Coach</a>
+            <a href="https://coach.arguflow.ai/"> AI Coach</a>
           </li>
           <li>
-            <a href="https://vault.arguflow.com/"> Vault</a>
+            <a href="https://vault.arguflow.ai/"> Vault</a>
           </li>
           <li>
-            <a href="https://arguflow.gg/"> Live Debate</a>
+            <a href="https://docs.arguflow.gg/"> Live Debate</a>
           </li>
           <li>
             <LinkButton
