--- a/apps/frontend/src/components/Header.astro
+++ b/apps/frontend/src/components/Header.astro
@@ -15,7 +15,7 @@ const { activeNav } = Astro.props;
     class="card py-3 font-semibold"
     style="margin: 0px; position: relative; width: 100%; color: blue; background-color: yellow; justify-content: center; text-align: center; font-size: 20px; flex: 1 1 0%; background-image: linear-gradient(59deg, rgb(163, 62, 181) 0%, rgb(0, 221, 231) 100%);"
   >
-    <div style="color: white;">
+    <div class="p-2" style="color: white;">
       Check out <a
         class="font-bold underline"
         href="https://vault.arguflow.ai"
