--- a/apps/frontend/src/pages/index.astro
+++ b/apps/frontend/src/pages/index.astro
@@ -43,7 +43,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       <p>
         Arguflow is a tech startup trying to solve the problem of constructive
         diaologue for everyone from individuals to organizations. Thus far, we
-        have shipped two products: <a class="underline" href="https://arguflow.gg">Arguflow Live Debate</a> and
+        have shipped: <a class="underline" href="https://vault.arguflow.ai">Arguflow Vault</a>, </a> <a class="underline" href="https://arguflow.gg">Arguflow Live Debate</a>, and
         <a class="underline" href="https://coach.arguflow.ai">Arguflow AI Debate Coach</a>.
       </p>
       <p>
