content: change check from debate to AI

--- a/apps/frontend/src/components/Header.astro
+++ b/apps/frontend/src/components/Header.astro
@@ -20,7 +20,7 @@ const { activeNav } = Astro.props;
         class="font-bold underline"
         href="https://vault.arguflow.ai"
         style="color: rgb(211, 255, 25);">Vault</a
-      >, Arguflow's new debate search platform
+      >, Arguflow's new AI search platform
     </div>
   </div>
   <a id="skip-to-content" href="#main-content">Skip to content</a>
