content: change CTA to chat and add meeting CTA

--- a/apps/frontend/src/components/Header.astro
+++ b/apps/frontend/src/components/Header.astro
@@ -18,9 +18,9 @@ const { activeNav } = Astro.props;
     <div class="p-2" style="color: white;">
       Check out <a
         class="font-bold underline"
-        href="https://vault.arguflow.ai"
-        style="color: rgb(211, 255, 25);">Vault</a
-      >, Arguflow's new AI search platform
+        href="https://chat.arguflow.ai"
+        style="color: rgb(211, 255, 25);">Chat</a
+      >, a demo of Arguflow's LLM chat infrastructure.
     </div>
   </div>
   <a id="skip-to-content" href="#main-content">Skip to content</a>
@@ -86,10 +86,10 @@ const { activeNav } = Astro.props;
             >
           </li>
           <li>
-            <a href="https://coach.arguflow.ai/"> AI Coach</a>
+            <a href="https://coach.arguflow.ai/">LLM Debate</a>
           </li>
           <li>
-            <a href="https://docs.arguflow.gg/"> Live Debate</a>
+            <a href="https://search.arguflow.ai/">Evidence Search</a>
           </li>
           <li>
             <LinkButton
