--- a/apps/frontend/src/pages/index.astro
+++ b/apps/frontend/src/pages/index.astro
@@ -16,7 +16,7 @@ const posts = await getCollection("blog");
 const sortedPosts = getSortedPosts(posts);
 const featuredPosts = sortedPosts.filter(({ data }) => data.featured);
 
-const socialCount = SOCIALS.filter(social => social.active).length;
+const socialCount = SOCIALS.filter((social) => social.active).length;
 ---
 
 <Layout>
@@ -41,13 +41,16 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       </a>
 
       <p>
-        Arguflow is a tech startup trying to solve the problem of constructive
-        diaologue for everyone from individuals to organizations. Thus far, we
-        have shipped: <a class="underline" href="https://vault.arguflow.ai">Arguflow Vault</a>, </a> <a class="underline" href="https://arguflow.gg">Arguflow Live Debate</a>, and
-        <a class="underline" href="https://coach.arguflow.ai">Arguflow AI Debate Coach</a>.
+        Arguflow is a tech startup that makes AI infrastructure for business
+        teams. We focus on no-hallucination use-cases with semantic search using <a
+          class="underline"
+          href="https://search.arguflow.ai">Arguflow Search</a
+        > and
+        <a class="underline" href="https://chat.arguflow.ai">Arguflow Chat</a>.
       </p>
       <p>
-        Read the blog posts for more info.
+        <a class="underline" href="https://arguflow.ai/meet">Book a meeting</a> to
+        talk about using our infrastructure for your business case.
       </p>
       {
         // only display if at least one social link is enabled
@@ -112,12 +115,14 @@ const socialCount = SOCIALS.filter(social => social.active).length;
   </main>
 
   <Footer />
+  <Footer />
 </Layout>
+<Footer />
 
 <style>
   /* ===== Hero Section ===== */
   #hero {
-    @apply pt-8 pb-6;
+    @apply pb-6 pt-8;
   }
   #hero h1 {
     @apply my-4 inline-block text-3xl font-bold sm:my-8 sm:text-5xl;
@@ -135,13 +140,13 @@ const socialCount = SOCIALS.filter(social => social.active).length;
     @apply mt-4 flex flex-col sm:flex-row sm:items-center;
   }
   .social-links {
-    @apply mr-2 mb-1 whitespace-nowrap sm:mb-0;
+    @apply mb-1 mr-2 whitespace-nowrap sm:mb-0;
   }
 
   /* ===== Featured & Recent Posts Sections ===== */
   #featured,
   #recent-posts {
-    @apply pt-12 pb-6;
+    @apply pb-6 pt-12;
   }
   #featured h2,
   #recent-posts h2 {
