content: make the demo's purpose more clear

--- a/apps/frontend/src/components/Header.astro
+++ b/apps/frontend/src/components/Header.astro
@@ -20,7 +20,7 @@ const { activeNav } = Astro.props;
         class="font-bold underline"
         href="https://chat.arguflow.ai"
         style="color: rgb(211, 255, 25);">Chat</a
-      >, a demo of Arguflow's LLM chat infrastructure.
+      >, a demo of Arguflow's LLM chat infrastructure for a debate use-case.
     </div>
   </div>
   <a id="skip-to-content" href="#main-content">Skip to content</a>
