content: add author to post, styling: de-emphasize vault, styling: remove banner

--- a/apps/frontend/src/components/Header.astro
+++ b/apps/frontend/src/components/Header.astro
@@ -66,10 +66,7 @@ const { activeNav } = Astro.props;
             </a>
           </li>
           <li>
-            <a href="https://vault.arguflow.ai/"> Vault</a>
-          </li>
-          <li>
-            <a href="https://coach.arguflow.ai/">LLM Debate</a>
+            <a href="https://chat.arguflow.ai/">Retrieval-augmented chat</a>
           </li>
           <li>
             <a href="https://search.arguflow.ai/">Evidence Search</a>
