--- a/apps/frontend/src/layouts/PostDetails.astro
+++ b/apps/frontend/src/layouts/PostDetails.astro
@@ -24,8 +24,10 @@ const ogUrl = new URL(ogImage ? ogImage : `${title}.png`, Astro.url.origin)
   <Header />
   <div class="mx-auto flex w-full max-w-3xl justify-start px-2">
     <button
-      class="focus-outline mt-8 mb-2 flex hover:opacity-75"
-      onclick="history.back()"
+      class="focus-outline mb-2 mt-8 flex hover:opacity-75"
+      onclick="
+      history.back()
+"
     >
       <svg xmlns="http://www.w3.org/2000/svg"
         ><path
@@ -37,12 +39,18 @@ const ogUrl = new URL(ogImage ? ogImage : `${title}.png`, Astro.url.origin)
   <main id="main-content">
     <h1 class="post-title">{title}</h1>
     <Datetime datetime={pubDatetime} size="lg" className="my-2" />
+    <div class="my-2 flex items-center space-x-2 opacity-80">
+      <span>By:</span>
+      <span class="text-base italic">
+        {author}
+      </span>
+    </div>
     <article id="article" role="article" class="prose mx-auto mt-8 max-w-3xl">
       <Content />
     </article>
 
     <ul class="tags-container">
-      {tags.map(tag => <Tag name={tag} />)}
+      {tags.map((tag) => <Tag name={tag} />)}
     </ul>
   </main>
   <Footer />
