--- a/apps/frontend/src/components/Header.astro
+++ b/apps/frontend/src/components/Header.astro
@@ -11,18 +11,6 @@ const { activeNav } = Astro.props;
 ---
 
 <header>
-  <div
-    class="card py-3 font-semibold"
-    style="margin: 0px; position: relative; width: 100%; color: blue; background-color: yellow; justify-content: center; text-align: center; font-size: 20px; flex: 1 1 0%; background-image: linear-gradient(59deg, rgb(163, 62, 181) 0%, rgb(0, 221, 231) 100%);"
-  >
-    <div class="p-2" style="color: white;">
-      Check out <a
-        class="font-bold underline"
-        href="https://chat.arguflow.ai"
-        style="color: rgb(211, 255, 25);">Chat</a
-      >, a demo of Arguflow's LLM chat infrastructure for a debate use-case.
-    </div>
-  </div>
   <a id="skip-to-content" href="#main-content">Skip to content</a>
   <div class="nav-container">
     <div class="top-nav-wrap min-h-[50px]">
@@ -78,12 +66,7 @@ const { activeNav } = Astro.props;
             </a>
           </li>
           <li>
-            <a
-              class="font-extrabold underline"
-              href="https://vault.arguflow.ai/"
-            >
-              Vault</a
-            >
+            <a href="https://vault.arguflow.ai/"> Vault</a>
           </li>
           <li>
             <a href="https://coach.arguflow.ai/">LLM Debate</a>
